--- a/algorithm.vcxproj
+++ b/algorithm.vcxproj
@@ -145,6 +145,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="character1.h" />
+    <ClInclude Include="charatcter2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
