--- a/algorithm.vcxproj.filters
+++ b/algorithm.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="character1.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="charatcter2.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
